# ai-native-travel

./: .env.example  .gitignore  EVAL.md  LOOM_SCRIPT.md  Makefile  README.md  SETUP.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  llm.py  main.py  models.py  search.py
backend/app/agents/: orchestrator.py
backend/app/agents/prompts/: compare.md  intent.md  review.md
backend/pipeline/: eval_harness.py  ingest.py
backend/tests/: test_intent.py
db/: Dockerfile
db/migrations/: 001_init.sql
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/compare/: page.tsx
frontend/app/properties/[id]/: page.tsx
frontend/app/reserve/[id]/: page.tsx
frontend/components/: Concierge.tsx  NavigationLoader.tsx  PropertyCard.tsx  ResultsApp.tsx
frontend/lib/: api.ts
