[project]
name = "travel-concierge-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "google-genai>=1.0.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.60",
  "orjson>=3.10.0",
  "pandas>=2.2.0",
  "polars>=1.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-dateutil>=2.9.0",
  "redis>=5.0.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "sse-starlette>=2.1.0",
  "tenacity>=8.3.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "pipeline*"]
